fix(site/src): align tritan warning surfaces

--- a/site/src/index.css
+++ b/site/src/index.css
@@ -350,7 +350,7 @@
 		--surface-destructive: 0 93% 94%;
 		--surface-green: 141 79% 85%;
 		--surface-grey: 240 5% 96%;
-		--surface-orange: 34 100% 92%;
+		--surface-orange: 289 100% 98%;
 		--surface-sky: 191, 67%, 89%;
 		--surface-red: 0 93% 94%;
 		--surface-purple: 259, 100%, 95%;
@@ -413,7 +413,7 @@
 		--surface-destructive: 0 75% 15%;
 		--surface-green: 145 80% 10%;
 		--surface-grey: 240 6% 10%;
-		--surface-orange: 13 81% 15%;
+		--surface-orange: 322 70% 15%;
 		--surface-sky: 196, 67%, 12%;
 		--surface-red: 0 75% 15%;
 		--surface-purple: 268, 68%, 17%;
